@@ -344,7 +344,7 @@
     <div class="sectiontext">
       <p>
 	c3p0 was designed to be butt-simple to use. Just put
-	the files <tt>lib/c3p0-@c3p0.version@.jar</tt> and <tt>lib/mchange-commons-java-@mchange-commons.version@.jar</tt> in your application's
+	the files <tt>lib/c3p0-@c3p0.version@.jar</tt> and <tt>lib/mchange-commons-java-@mchange-commons-java.version@.jar</tt> in your application's
 	effective <tt>CLASSPATH</tt>, then make a DataSource like this:
       </p>
       <div class="example">
