@@ -32,7 +32,7 @@
    <dependency>                                                                                                                                              
      <groupId>com.mchange</groupId>                                                                                                                                  
      <artifactId>mchange-commons-java</artifactId>                                                                                                                            
-     <version>0.2.1</version>                                                                                                                                  
-   </dependency>                                                                                                                                             
+     <version>@mchange-commons-java.version.maven@</version>
+   </dependency>
  </dependencies>                                                                                                                                                  
 </project>                                                                                                                                                   
