@@ -1,3 +1,7 @@
+c3p0-0.9.2-pre4
+	-- Fixed broken version on Maven dependency to mchange-commons-java.
+	   Version was hardcoded, now uses version number that c3p0 was built
+	   against.
 c3p0-0.9.2-pre3
 	-- Added workaround for bug in Maven 2.2.1 that sometimes leads to corruption
 	   of deployed artifacts. See http://jira.codehaus.org/browse/MNG-4301
